--- a/src/app/components/book-list/book-list.component.html
+++ b/src/app/components/book-list/book-list.component.html
@@ -1,19 +1,25 @@
 <div class="container mt-4">
-  <h2>All Books</h2>
-  <table class="table table-striped table-bordered">
-    <thead class="table-dark">
-      <tr>
-        <th>Title</th>
-        <th>Author</th>
-        <th>Price (₹)</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let book of books">
-        <td>{{ book.title }}</td>
-        <td>{{ book.author }}</td>
-        <td>{{ book.price }}</td>
-      </tr>
-    </tbody>
-  </table>
+    <h2 class="mb-4">Book Inventory</h2>
+    <table class="table table-hover table-bordered">
+        <thead class="table-dark">
+            <tr>
+                <th>Title</th>
+                <th>Author</th>
+                <th>Price (₹)</th>
+                <th>Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let book of books">
+                <td>{{ book.title }}</td>
+                <td>{{ book.author }}</td>
+                <td>{{ book.price | currency:'INR' }}</td>
+                <td>
+                    <button class="icon-button icon-view me-2" title="View"><i class="bi bi-eye"></i></button>
+                    <button class="icon-button icon-edit me-2" title="Edit"><i class="bi bi-pencil"></i></button>
+                    <button class="icon-button icon-delete" title="Delete"><i class="bi bi-trash"></i></button>
+                </td>
+            </tr>
+        </tbody>
+    </table>
 </div>
