Added Update(Edit) Book and Delete Book Functionality.

--- a/src/app/components/book-list/book-list.component.html
+++ b/src/app/components/book-list/book-list.component.html
@@ -24,8 +24,8 @@
                 <td>
                     <button class="icon-button icon-view me-2" [routerLink]="['/books', book.id]" title="View"><i
                             class="bi bi-eye"></i></button>
-                    <button class="icon-button icon-edit me-2" title="Edit"><i class="bi bi-pencil"></i></button>
-                    <button class="icon-button icon-delete" title="Delete"><i class="bi bi-trash"></i></button>
+                    <button class="icon-button icon-edit me-2" [routerLink]="['/books/edit', book.id]" title="Edit"><i class="bi bi-pencil"></i></button>
+                    <button class="icon-button icon-delete" [routerLink]="['/books/delete', book.id]" title="Delete"><i class="bi bi-trash"></i></button>
                 </td>
             </tr>
         </tbody>
